# CookieEngine

./: .gitignore  CMakeLists.txt  main.cpp
dependencies/: instructions.md
src/core/: Engine.cpp  Engine.hpp  Singleton.hpp
src/graphics/: Renderer.hpp  Window.cpp  Window.hpp
